--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.2",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-moment": "^1.1.3",
