--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,8 +21,10 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
