--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-datepicker": "^4.10.0",
+    "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
