--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,8 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
+    "react-calendar": "^4.0.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.10.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
