--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-calendar": "^4.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.10.0",
     "react-day-picker": "^8.6.0",
